plugins {
    // https://maven.fabricmc.net/fabric-loom/fabric-loom.gradle.plugin/
    id 'fabric-loom' version '1.7.1'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/releases" }
    maven { url "https://maven.maxhenkel.de/releases" }
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

def mcLibPath = System.getenv('MINECRAFT_LD_LIBRARY_PATH') ?: System.getenv('LD_LIBRARY_PATH') ?: ''

loom {
    runs {
        configureEach {
            if (!mcLibPath.isEmpty()) {
                environmentVariable 'LD_LIBRARY_PATH', mcLibPath
            }
        }

        client {
            configName = 'Minecraft Client'
            ideConfigGenerated = true
            vmArg '-Xmx4G'
            vmArg '-Dorg.lwjgl.util.Debug=true'
            vmArg '-Dorg.lwjgl.util.DebugLoader=true'
            vmArg '-Dfabric.log.level=debug'
            property 'fabric.log.level', 'debug'
        }

        server {
            configName = 'Minecraft Server'
            ideConfigGenerated = true
        }
    }
}

dependencies {
    // to change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // Cloth Config (including Auto Config)
    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
        exclude(group: "net.fabricmc", module: "fabric-loader")
        exclude(group: "net.fabricmc.fabric-api")
    }

    modImplementation("de.maxhenkel.voicechat:voicechat-api:${voicechat_api_version}") {
        exclude(group: "net.fabricmc", module: "fabric-loader")
        exclude(group: "net.fabricmc.fabric-api")
    }

    modCompileOnly("com.terraformersmc:modmenu:${project.mod_menu_version}") {
        exclude(group: "net.fabricmc", module: "fabric-loader")
        exclude(group: "net.fabricmc.fabric-api")
    }
    modLocalRuntime("com.terraformersmc:modmenu:${project.mod_menu_version}") {
        exclude(group: "net.fabricmc", module: "fabric-loader")
        exclude(group: "net.fabricmc.fabric-api")
    }
    // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
    // You may need to force-disable transitiveness on them.

    // Lane 2 of the test harness: runs the same tests as core-tests/, but with
    // Minecraft on the classpath, so the adapters can be covered too.
    // See residual/research/tagging-plan.md for why there are two lanes.
    testImplementation platform("org.junit:junit-bom:5.11.4")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}


tasks.withType(JavaCompile).configureEach {
    // ensure that the encoding is set to UTF-8, no matter what the system default is
    // this fixes some edge cases with special characters not displaying correctly
    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
    // If Javadoc is generated, this must be specified in that task too.
    it.options.encoding = "UTF-8"

    // Minecraft 1.17 (21w19a) upwards uses Java 16.
    //noinspection GroovyAssignabilityCheck, GroovyAccessibility
    it.options.release = 21
}

test {
    useJUnitPlatform()
    systemProperty "resounding.lane", "2"
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

java {
    withSourcesJar()
}

jar {
    from "LICENSE"
}
